--- a/training.yaml
+++ b/training.yaml
@@ -28,8 +28,8 @@ MODEL:
 
 # Optimization arguments.
 OPTIM:
-  BATCH: 16 #32
-  EPOCHS: 1 #200
+  BATCH: 16
+  EPOCHS: 500
   # EPOCH_DECAY: [10]
   LR_INITIAL: 1e-3 #2e-4
   LR_MIN: 1e-5 #1e-6
@@ -37,9 +37,9 @@ OPTIM:
 
 TRAINING:
   VAL_AFTER_EVERY: 1
-  RESUME: False
+  RESUME: True
   TRAIN_PS: 128
   VAL_PS: 128 
-  TRAIN_DIR: './datasets/Denoising_DIV2K/train'       # path to training data
-  VAL_DIR: './datasets/Denoising_DIV2K/test' # path to validation data
+  # TRAIN_DIR: './datasets/Denoising_DIV2K/train'       # path to training data
+  # VAL_DIR: './datasets/Denoising_DIV2K/test' # path to validation data
   SAVE_DIR: '/home/users/a/akhaury/scratch/SingleChannel_Deconv/Trained_Models/SUNet'           # path to save models and images
